@@ -31,6 +31,7 @@ import java.io.InputStreamReader;
 import java.io.Reader;
 import java.io.StringReader;
 import java.io.Writer;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Comparator;
@@ -53,6 +54,7 @@ import org.apache.lucene.document.StringField;
 import org.apache.lucene.document.TextField;
 import org.apache.lucene.util.BytesRef;
 import org.opensolaris.opengrok.analysis.FileAnalyzer.Genre;
+import org.opensolaris.opengrok.analysis.ada.AdaAnalyzerFactory;
 import org.opensolaris.opengrok.analysis.archive.BZip2AnalyzerFactory;
 import org.opensolaris.opengrok.analysis.archive.GZIPAnalyzerFactory;
 import org.opensolaris.opengrok.analysis.archive.TarAnalyzerFactory;
@@ -62,6 +64,7 @@ import org.opensolaris.opengrok.analysis.c.CxxAnalyzerFactory;
 import org.opensolaris.opengrok.analysis.csharp.CSharpAnalyzerFactory;
 import org.opensolaris.opengrok.analysis.data.IgnorantAnalyzerFactory;
 import org.opensolaris.opengrok.analysis.data.ImageAnalyzerFactory;
+import org.opensolaris.opengrok.analysis.document.MandocAnalyzerFactory;
 import org.opensolaris.opengrok.analysis.document.TroffAnalyzerFactory;
 import org.opensolaris.opengrok.analysis.erlang.ErlangAnalyzerFactory;
 import org.opensolaris.opengrok.analysis.executables.ELFAnalyzerFactory;
@@ -87,6 +90,7 @@ import org.opensolaris.opengrok.analysis.json.JsonAnalyzerFactory;
 import org.opensolaris.opengrok.analysis.kotlin.KotlinAnalyzerFactory;
 import org.opensolaris.opengrok.analysis.sh.ShAnalyzerFactory;
 import org.opensolaris.opengrok.analysis.powershell.PowershellAnalyzerFactory;
+import org.opensolaris.opengrok.analysis.ruby.RubyAnalyzerFactory;
 import org.opensolaris.opengrok.analysis.sql.PLSQLAnalyzerFactory;
 import org.opensolaris.opengrok.analysis.sql.SQLAnalyzerFactory;
 import org.opensolaris.opengrok.analysis.swift.SwiftAnalyzerFactory;
@@ -153,7 +157,7 @@ public class AnalyzerGuru {
     /**
      * Descending string length comparator for magics
      */
-    private static Comparator<String> descStrlenComparator =
+    private static final Comparator<String> descStrlenComparator =
         new Comparator<String>() {
         @Override public int compare(String s1, String s2) {
             // DESC: s2 length <=> s1 length
@@ -197,7 +201,10 @@ public class AnalyzerGuru {
     private static final Map<String, String> fileTypeDescriptions = new TreeMap<>();
 
     /*
-     * If you write your own analyzer please register it here
+     * If you write your own analyzer please register it here. The order is
+     * important for any factory that uses a FileAnalyzerFactory.Matcher
+     * implementation, as those are run in the same order as defined below --
+     * though precise Matchers are run before imprecise ones.
      */
     static {
         FileAnalyzerFactory[] analyzers = {
@@ -205,7 +212,8 @@ public class AnalyzerGuru {
             new IgnorantAnalyzerFactory(),
             new BZip2AnalyzerFactory(),
             new XMLAnalyzerFactory(),
-            new TroffAnalyzerFactory(),
+            MandocAnalyzerFactory.DEFAULT_INSTANCE,
+            TroffAnalyzerFactory.DEFAULT_INSTANCE,
             new ELFAnalyzerFactory(),
             new JavaClassAnalyzerFactory(),
             new ImageAnalyzerFactory(),
@@ -241,7 +249,9 @@ public class AnalyzerGuru {
             new HaskellAnalyzerFactory(),
             new GolangAnalyzerFactory(),
             new LuaAnalyzerFactory(),
-            new PascalAnalyzerFactory()
+            new PascalAnalyzerFactory(),
+            new AdaAnalyzerFactory(),
+            new RubyAnalyzerFactory()
         };
 
         for (FileAnalyzerFactory analyzer : analyzers) {
@@ -461,7 +471,14 @@ public class AnalyzerGuru {
             // spaces to match the project's tab settings.
             input = ExpandTabsReader.wrap(in, project);
         }
-        factory.writeXref(input, out, defs, annotation, project);
+
+        WriteXrefArgs args = new WriteXrefArgs(input, out);
+        args.setDefs(defs);
+        args.setAnnotation(annotation);
+        args.setProject(project);
+
+        FileAnalyzer analyzer = factory.getAnalyzer();
+        analyzer.writeXref(args);
     }
 
     /**
@@ -512,16 +529,18 @@ public class AnalyzerGuru {
      * FileAnalyzerFactory}
      * @throws IllegalAccessException if the constructor cannot be accessed
      * @throws InstantiationException if the class cannot be instantiated
+     * @throws NoSuchMethodException if no-argument constructor could not be found
+     * @throws InvocationTargetException if the underlying constructor throws an exception
      */
     public static FileAnalyzerFactory findFactory(String factoryClassName)
-            throws ClassNotFoundException, IllegalAccessException,
-            InstantiationException {
-        Class fcn = null;
+            throws ClassNotFoundException, IllegalAccessException, InstantiationException, NoSuchMethodException, 
+            InvocationTargetException {
+        Class<?> fcn = null;
         try {
             fcn = Class.forName(factoryClassName);
             
         } catch (ClassNotFoundException e) {
-            fcn  = getFactoryClass(factoryClassName);
+            fcn = getFactoryClass(factoryClassName);
             
             if (fcn == null) {
                 throw new ClassNotFoundException("Unable to locate class " + factoryClassName);
@@ -540,9 +559,8 @@ public class AnalyzerGuru {
      * 
      * @return the analyzer factory class, or null when not found.
      */
-    public static Class getFactoryClass(String simpleName) {
-        //return new AnalyzerGuru().getClass().getPackage().getName();
-        Class factoryClass = null;
+    public static Class<?> getFactoryClass(String simpleName) {
+        Class<?> factoryClass = null;
         
         // Build analysis package name list first time only
         if (analysisPkgNames.isEmpty()) {
@@ -593,16 +611,17 @@ public class AnalyzerGuru {
      * FileAnalyzerFactory}
      * @throws IllegalAccessException if the constructor cannot be accessed
      * @throws InstantiationException if the class cannot be instantiated
+     * @throws NoSuchMethodException if no-argument constructor could not be found
+     * @throws InvocationTargetException if the underlying constructor throws an exception
      */
     private static FileAnalyzerFactory findFactory(Class<?> factoryClass)
-            throws InstantiationException, IllegalAccessException {
+            throws InstantiationException, IllegalAccessException, NoSuchMethodException, InvocationTargetException {
         for (FileAnalyzerFactory f : factories) {
             if (f.getClass() == factoryClass) {
                 return f;
             }
         }
-        FileAnalyzerFactory f
-                = (FileAnalyzerFactory) factoryClass.newInstance();
+        FileAnalyzerFactory f = (FileAnalyzerFactory) factoryClass.getDeclaredConstructor().newInstance();
         registerAnalyzer(f);
         return f;
     }
